# can-duck-core

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
apps/SerialLogViewer/: CMakeLists.txt
docs/: CodeStyle.cpp  Doxyfile
docs/doxygen/html/: annotated.html  class_class_template-members.html  class_class_template.html  classes.html  functions.html  functions_func.html  index.html  struct_class_template_1_1_inner-members.html  struct_class_template_1_1_inner.html
docs/doxygen/html/search/: all_0.js  all_1.js  classes_0.js  functions_0.js  functions_1.js  searchdata.js
docs/doxygen/latex/: annotated.tex  class_class_template.tex  refman.tex  struct_class_template_1_1_inner.tex
docs/img/: logo.afdesign  ~$文档插图.pptx  文档插图.pptx
example/: CMakeLists.txt
example_apps/apps/SerialLogViewer/: CMakeLists.txt  main.cpp
example_apps/apps/SerialTerminal/: CMakeLists.txt  main.cpp
example_apps/example/: CMakeLists.txt
example_apps/example/SVO_DualUartPC/: main.cpp
example_apps/example/idl_gen/: ServoPubMsg.cpp  ServoPubMsg.hpp  ServoSrvMsg.fcnsrv.hpp
example_apps/example/pubsub_pc/: host.cpp  servo.cpp
libfcn_v2_stm32/: .cproject  .mxproject  .project  libfcn_v2_stm32.ioc
libfcn_v2_stm32/Core/Src/: main.c  stm32f4xx_hal_msp.c
libfcn_v2_stm32/User/: Bsp.cpp  UserTask.h
libfcn_v2_stm32/User/ut/: SimpleSerialNode.hpp  testFrame.cpp
libfcn_v2_stm32/UserMiddleware/hal_cpp_wrapper/: BasicTimer.hpp  Can.hpp  Dac.hpp  Gpio.hpp  Usart.hpp
libfcn_v2_stm32/UserMiddleware/libfcn/: LLComDevice.hpp  Log.hpp  NetworkLayer.cpp  ParamServerRequestEv.cpp  ParamServerRequestEv.hpp  PubSub.cpp  PubSub.hpp
libfcn_v2_stm32/UserMiddleware/utils/: BitLUT8.hpp  DataVerify.hpp  vector_s.hpp
src/: CMakeLists.txt  ClientRequestEv.cpp  ClientRequestEv.hpp  Common.hpp  Context.cpp  Context.hpp  DataLinkLayer.cpp  DataLinkLayer.hpp  DataObjects.hpp  DefaultAllocate.h  DuckDebug.cpp  DuckDebug.hpp  FileTransfer.cpp  FileTransfer.hpp  FrameUtils.cpp  FrameUtils.hpp  LLComDevice.hpp  LargeDataTrans.cpp  LargeDataTrans.hpp  Log.cpp  Log.hpp  MemMap.hpp  Message.cpp  Message.hpp  MultiFrame.cpp  MultiFrame.hpp  NetworkLayer.cpp  NetworkLayer.hpp  Node.cpp  Node.hpp  ObjDict.hpp  OpCode.hpp  OperationCode.hpp  ParamServer.cpp  ParamServer.hpp  ParamServerRequestEv.cpp  ParamServerRequestEv.hpp  PubSub.cpp  PubSub.hpp  RealtimeObject.cpp  (+11 more)
src/apps/SerialLogViewer/: CMakeLists.txt  main.cpp
src/example/: CMakeLists.txt
src/example/RTO_DualUartPC/: main.cpp
src/example/idl_gen/: ServoPubMsg.cpp  ServoPubMsg.idl.hpp  test_ServoDict.cpp  test_ServoDict.hpp
src/example/pubsub_pc/: host.cpp  servo.cpp
src/example/stm32/: .cproject  emros_stm32 Debug.launch  libfcn_v2_stm32 Debug.launch
src/example/stm32/Core/Inc/: stm32f4xx_hal_conf.h
src/example/stm32/Core/Src/: stm32f4xx_it.c
src/example/stm32/User/: Bsp.hpp  UserTask.cpp
src/example/stm32/User/ut/: SimpleSerialNode.hpp  testFrame.cpp  test_ServoDict.cpp
src/example/stm32/UserMiddleware/hal_cpp_wrapper/: Adc.hpp  Gpio.cpp  Usart.cpp
src/libfcn/: CMakeLists.txt  DataLinkLayer.cpp  DataLinkLayer.hpp  DataVerify.cpp  DataVerify.hpp  Log.cpp  Log.hpp  MultiFrame.hpp  NetworkLayer.cpp  NetworkLayer.hpp  Node.cpp  Node.hpp  OpCode.hpp  ParamServer.cpp  ParamServer.hpp  ParamServerRequestEv.cpp  ParamServerRequestEv.hpp  PubSub.cpp  PubSub.hpp  SerDesDict.hpp
src/utils/: Array.hpp  CMakeLists.txt  CppUtils.hpp  DataVerify.cpp  EHeap.cpp  EHeap.hpp  EHeapUserAllocate.cpp  ESharedPtr.hpp  EventLoop.hpp  EventLoopBase.cpp  EventLoopBase.hpp  HostIODeviceWrapper.hpp  IntMap.hpp  LLComDevice.hpp  LinkedList.hpp  MemMap.hpp  ObjPool.cpp  ObjPool.hpp  PosixSerial.cpp  PosixSerial.hpp  RingBuf.hpp  Ringbuffer.c  Ringbuffer.h  SharedMQ.cpp  SharedMQ.hpp  StaticHeap.hpp  Tracer.cpp  Tracer.hpp  Vector.hpp  queue_s.hpp  vector_s.hpp
src/utils/os_only/: HostIODeviceWrapper.cpp  HostIODeviceWrapper.hpp  HostSerial.cpp  HostSerial.hpp  PosixSerial.cpp  PosixSerial.hpp
src/utils/os_only/qtscope/: CMakeLists.txt  QOscilloScope.cpp  QOscilloScope.h  QOscilloScope.ui  QOscilloscope.cpp  QOscilloscope.h  main.cpp
src/utils/os_only/qtscope/qtscope/: CMakeLists.txt  QOscilloScope.cpp  QOscilloScope.h  QOscilloScope.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
unit_test/: CMakeLists.txt  Context.cpp  DataLinkLayer.cpp  DataObjects.cpp  MemMap.cpp  Message.cpp  NetworkLayer.cpp  ObjDict.cpp  ParamServer.cpp  PubSub.cpp  RealtimeObject.cpp  SerDesDict.cpp  Service.cpp  ServiceObject.cpp  ServoDict.cpp  ServoDict.hpp  ServoPubMsg.cpp  ServoPubMsg.hpp  SimpleSerialNode.hpp  TestRODict.hpp  TestUtils.hpp  testFlatbuffers.cpp  testServoRtoDict.hpp  testServoSvoDict.hpp  test_ServoRTO.cpp  test_ServoRTO.hpp
unit_test/libfcn/: CMakeLists.txt  DataLinkLayer.cpp  DataVerify.cpp  NetworkLayer.cpp  ParamServer.cpp  PubSub.cpp  SerDesDict.cpp  ServoPubMsg.cpp  ServoPubMsg.hpp  SimpleSerialNode.hpp  TestUtils.hpp  test_ServoDict.hpp
unit_test/utils/: Array.cpp  CMakeLists.txt  CppUtils.cpp  DataVerify.cpp  EHeap.cpp  ESharedPtr.cpp  EventLoopThreading.cpp  LinkedList.cpp  MemMap.cpp  PosixSerial.cpp  Tracer.cpp  Vector.cpp  WinSerial.cpp  queue_s.cpp  vector_s.cpp
unit_test/utils/os_only/qtscope/: QOscilloscope.cpp
